--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,10 @@
 name: Run Tests
 
 on:
+  push:
+    branches: [ "**" ]
   pull_request:
-    branches:
-      - main
+    branches: [ "**" ]
 
 jobs:
   test:
